cmake_minimum_required(VERSION 2.8)

project(codingame)

add_subdirectory(easy/onboarding)
add_subdirectory(easy/skynet.the.chasm)
add_subdirectory(easy/the.descent)
add_subdirectory(easy/power.of.thor)
add_subdirectory(easy/mars.lander)
add_subdirectory(easy/temperatures)
add_subdirectory(easy/ascii.art)

add_definitions(-Wall -g -00)
