cmake_minimum_required(VERSION 2.8)

project(codingame)

add_definitions(-Wall -g -O0)

add_subdirectory(easy/onboarding)
add_subdirectory(easy/skynet.the.chasm)
add_subdirectory(easy/the.descent)
add_subdirectory(easy/power.of.thor)
add_subdirectory(easy/mars.lander)
add_subdirectory(easy/temperatures)
add_subdirectory(easy/ascii.art)
add_subdirectory(easy/chuck.norris)
add_subdirectory(easy/mime.type)
add_subdirectory(easy/defibrillators)
add_subdirectory(easy/horse.racing.duals)

add_subdirectory(medium/skynet.the.virus)
add_subdirectory(medium/heat.detector)
add_subdirectory(medium/the.paranoid.android)
add_subdirectory(medium/indiana.l1)
add_subdirectory(medium/conway.sequence)
add_subdirectory(medium/telephone.numbers)
add_subdirectory(medium/dwarfs)
add_subdirectory(medium/bender)
add_subdirectory(medium/scrabble)
add_subdirectory(medium/the.gift)
add_subdirectory(medium/mayan.calculation)
add_subdirectory(medium/mars.lander.l2)

add_subdirectory(hard/skynet.strikes.back)
add_subdirectory(hard/the.labyrinth)
add_subdirectory(hard/skynet.the.bridge)
add_subdirectory(hard/the.paranoid.android)
add_subdirectory(hard/vox.codei)
add_subdirectory(hard/super.computer)
add_subdirectory(hard/roller.coaster)
add_subdirectory(hard/cgx.formatter)
add_subdirectory(hard/tan.network)
add_subdirectory(hard/genome.sequencing)
add_subdirectory(hard/surface)
add_subdirectory(hard/bender.the.money.machine)
add_subdirectory(hard/bender.algorithmic.complexity)

add_subdirectory(other/winamax)

add_subdirectory(optimization/bilbo's.forest)
